force-app/main/default/objects/Type_Advantage__mdt/Type_Advantage__mdt.object-meta.xml
<CustomObject>
    <label>Type Advantage</label>
    <pluralLabel>Type Advantages</pluralLabel>
</CustomObject>