force-app/main/default/objects/Type_Advantage__mdt/fields/Attacking_Type__c.field-meta.xml
<CustomField>
    <fullName>Attacking_Type__c</fullName>
    <label>Attacking Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Fire</fullName>
            </value>
            <value>
                <fullName>Water</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Grass</fullName>
            </value>
            <value>
                <fullName>Ice</fullName>
            </value>
            <value>
                <fullName>Fighting</fullName>
            </value>
            <value>
                <fullName>Poison</fullName>
            </value>
            <value>
                <fullName>Ground</fullName>
            </value>
            <value>
                <fullName>Flying</fullName>
            </value>
            <value>
                <fullName>Psychic</fullName>
            </value>
            <value>
                <fullName>Bug</fullName>
            </value>
            <value>
                <fullName>Rock</fullName>
            </value>
            <value>
                <fullName>Ghost</fullName>
            </value>
            <value>
                <fullName>Dragon</fullName>
            </value>
            <value>
                <fullName>Dark</fullName>
            </value>
            <value>
                <fullName>Steel</fullName>
            </value>
            <value>
                <fullName>Fairy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>