force-app/main/default/objects/Type_Advantage__mdt/fields/Damage_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>Damage_Multiplier__c</fullName>
    <label>Damage Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>