force-app/main/default/objects/Type_Advantage__mdt/listViews/Type_Advantages.listView-meta.xml
<ListView>
    <fullName>Type_Advantages</fullName>
    <columns>MasterLabel</columns>
    <columns>Attacking_Type__c</columns>
    <columns>Defending_Type__c</columns>
    <columns>Damage_Multiplier__c</columns>
    <filterScope>Everything</filterScope>
    <label>Type Advantages</label>
</ListView>